src/test/deca/context/invalid/test_error_2.9.deca
// Description:
//    Soulève l'erreur (2.9)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Identificateur de même nom déjà déclaré (règle 2.9)
//
// Historique:
//      cree le 06/01/2022

Class A {
    int i;
    float i;
}
